@@ -1,3 +1,8 @@
+2007-01-05  Daniel Elstner  <daniel.kitta@gmail.com>
+
+	* POTFILES.in: Move regexxer.{desktop,schemas}.in to the ui/
+	directory.
+
 2006-11-18  Djihed Afifi <djihed@gmail.com> 
 
 	* ar.po: Added Arabic Translation.
